# OV2SGD

./: .gitignore  CMakeLists.txt  Curl_ORFFFvsOVK.pgf  FindPython.cmake  FindTcMalloc.cmake  NLVAR_exp_toep.ipynb  NLVAR_exp_white.ipynb  NLVAR_lin_toep-Copy1.ipynb  NLVAR_lin_toep.ipynb  NLVAR_lin_white-Copy1.ipynb  NLVAR_lin_white-Copy2.ipynb  NLVAR_lin_white.ipynb  NLVAR_sine_toep.ipynb  NLVAR_sine_white.ipynb  O2CSVM.ipynb  ONORMA vs 2SGD.ipynb  ORFFFvsOVK.pgf  ORFFFvsOVK_Dvariation.pgf  ORFFFvsOVK_MNIST.pgf  PIV.ipynb  Simulated_data.ipynb  Synthetic JMLR1.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled10.ipynb  Untitled11.ipynb  Untitled12.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Untitled7.ipynb  Untitled8.ipynb  Untitled9.ipynb  VAR.ipynb  VAR.py  install  install.sh  kin_en_contours.eps  (+12 more)
Eigen/: .hg_archival.txt
example/: CMakeLists.txt  bench_epsilon.py  lbfgs.py  main.cpp  mnist8m.py  mnist8m_skewed.py  sarcos.py  sktest.py  species.py  test.py
include/: IO.hpp  aopt.hpp  bopt.hpp  feature_map.hpp  learning_rate.hpp  linear_operator.hpp  loss.hpp  opt.hpp  prng_engine.hpp  py_IO.hpp  py_aopt.hpp  py_bopt.hpp  py_convert.hpp  py_feature_map.hpp  py_learning_rate.hpp  py_loss.hpp  py_mod.hpp  py_opt.hpp
pyov2sgd/: __init__.py  simplex_coding.py
src/: opt.cpp
src/cpp/: IO.cpp  cpp_aopt.cpp  cpp_bopt.cpp  cpp_feature_map.cpp  cpp_learning_rate.cpp  cpp_loss.cpp  cpp_opt.cpp
src/pycpp/: py_IO.cpp  py_aopt.cpp  py_bopt.cpp  py_convert.cpp  py_feature_map.cpp  py_learning_rate.cpp  py_loss.cpp  py_mod.cpp  py_opt.cpp
